<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.HistoryVisits">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_history"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:padding="@dimen/_5sdp"
        android:gravity="center_horizontal"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_history_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/history_visits"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/textColor"/>
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/top_layout_history"
        android:visibility="gone"
        android:layout_below="@+id/toolbar_history"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/soring_txt_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_12ssp"
            android:textColor="#000000"
            android:padding="@dimen/_5sdp"
            android:text="@string/sorting"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"/>

        <TextView
            android:id="@+id/sorting_history_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/_11ssp"
            android:textColor="#AAAAAD"
            android:padding="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:drawableRight="@drawable/ic_vector"
            android:drawableEnd="@drawable/ic_vector"
            android:text="@string/by_date"/>

    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/top_layout_history"
        android:layout_marginBottom="60dp"
        android:id="@+id/recycler_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/progress_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:theme="@style/progressBarBlue"/>

    <TextView
        android:id="@+id/empty_txt_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_200sdp"
        android:text="@string/empty"
        android:textColor="#C8C7CC"/>


</RelativeLayout>