<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.EnterNumberFragment">

    <!-- TODO: Update blank fragment layout -->
   <ImageView
       android:id="@+id/logo_enter_number"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/ic_name_logo"
       android:layout_marginTop="@dimen/_70sdp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/enter_phone_num_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone_number"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_enter_number"
        android:textSize="@dimen/_15ssp"
        android:layout_margin="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@+id/enter_number_edt"/>

    <EditText
        android:id="@+id/enter_number_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:textColorHint="@color/colorHint"
        android:hint="@string/phone_number"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/textColor"
        android:inputType="phone"
        android:background="#F3F3F3"
        android:padding="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_phone_num_txt"/>

    <Button
        android:id="@+id/enter_number_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/enter_number_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:text="@string/next"
        android:textSize="@dimen/_13ssp"
        android:layout_margin="@dimen/_20sdp"
        android:background="@color/colorMainBlue"
        android:textColor="#FFFFFF"
        android:padding="@dimen/_15sdp"/>
</androidx.constraintlayout.widget.ConstraintLayout>