<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.SupportFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toobar_support"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_support_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/history_visits"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/textColor"/>
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        app:layout_constraintTop_toBottomOf="@+id/toobar_support"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#DBD5D5"/>


    <Button
        android:id="@+id/call_support_btn"
        android:background="@color/colorMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10ssp"
        android:text="@string/call"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_11ssp"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/chat_support_btn"
        />


    <Button
        android:id="@+id/chat_support_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMain"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:text="@string/start_chat"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_11ssp"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>