<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SplashScreenActivity">
    <ImageView
        android:id="@+id/logo_splash_screen"
        android:src="@drawable/ic_name_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/splash_welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20sdp"
        android:text="@string/wellcome"
        android:textColor="#1B1B1B"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_splash_screen"/>

    <Button
        android:id="@+id/splash_enter_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@color/colorMain"
        android:layout_marginBottom="@dimen/_40sdp"
        android:text="РЕГИСТРАЦИЯ"
        android:textColor="#fff"
        app:layout_constraintHorizontal_weight="1"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_btn"
        app:layout_constraintBottom_toTopOf="@+id/splash_website_txt"
        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@color/colorMain"
        android:layout_marginBottom="@dimen/_40sdp"
        android:text="@string/enter"
        android:textColor="#fff"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/splash_enter_btn"
        app:layout_constraintBottom_toTopOf="@+id/splash_website_txt"
        />

    <TextView
        android:id="@+id/splash_website_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:textColor="#C8C7CC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>