<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.VerificationFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/logo_verification_number"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_name_logo"
        android:layout_marginTop="@dimen/_70sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/enter_ver_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_verification"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_verification_number"
        android:textSize="@dimen/_15ssp"
        android:layout_margin="@dimen/_30sdp"/>

    <TextView
        android:id="@+id/timer_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_11ssp"
        android:padding="@dimen/_5sdp"
        android:text="SMS приходить через "

        app:layout_constraintTop_toBottomOf="@+id/enter_ver_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/timer_txt_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorMainBlue"
        android:textSize="@dimen/_13ssp"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/enter_ver_code"
        app:layout_constraintStart_toEndOf="@+id/timer_txt"
        />

    <com.goodiebag.pinview.Pinview
        android:id="@+id/pinview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:textSize="@dimen/_15ssp"
        app:pinBackground="@drawable/pin_background"
        app:inputType="number"
        app:pinLength="4"
        app:password="false"
        app:pinWidth="@dimen/_40sdp"
        app:pinHeight="@dimen/_40sdp"
        app:layout_constraintTop_toBottomOf="@+id/timer_txt"
        android:layout_margin="@dimen/_20sdp"></com.goodiebag.pinview.Pinview>

    <TextView
        android:id="@+id/didnot_get_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorMainBlue"
        android:textSize="@dimen/_13ssp"
        android:padding="@dimen/_5sdp"
        android:text="@string/didnotgetcode"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/pinview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_10sdp"/>
    <TextView
        android:id="@+id/go_to_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorMainBlue"
        android:textSize="@dimen/_13ssp"
        android:padding="@dimen/_5sdp"
        android:text="@string/go_to_back"
        app:layout_constraintTop_toBottomOf="@+id/didnot_get_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_10sdp"/>


</androidx.constraintlayout.widget.ConstraintLayout>